[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal finance tracker with ML categorization"
authors = [
    {name = "Tim Clarke", email = "timothyclarke@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi >=0.127.1, <0.128.0",
    "uvicorn[standard] >=0.40.0, <0.41.0",
    "sqlalchemy >=2.0.45, <3.0.0",
    "pydantic-settings >=2.12.0, <3.0.0",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi-testing (>=0.3.2,<0.4.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest >=9.0.2, <10.0.0",
    "mypy >=1.19.1, <2.0.0",
    "ruff >=0.14.10, <0.15.0"
]

[tool.ruff]
line-length = 88  # Match Black's line length
target-version = "py311"

[lint]
select = ["E", "F", "I", "N", "W"]
# E = pycodestyle errors
# F = pyflakes (logical errors)
# I = isort (import sorting)
# N = pep8 naming
# W = pycodestyle warnings

ignore = []

[lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Forces you to add type hints
